# steel

./: .env.example  Dockerfile_api  Dockerfile_modeling  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
api/: app.py  config.py  fetch_data.py  inference.py  models.py
ntb/: eda.ipynb
sql/: init.sql
src/commands/: commands.py
src/config/: __init__.py  config.py
src/modeling/: __init__.py  modeling.py
src/models/: models.py
src/processor/: processor.py
src/utils/: __init__.py  utils.py
