[project]
name = "draslovka"
version = "0.1.0"
description = "Entry task for Draslovka"
authors = [
    {name = "Yauheni Kachalouski",email = "kachalouski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "xgboost (>=2.1.4,<3.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "joblib (>=1.4.2,<2.0.0)"
]

[tool.poetry]
package-mode = false



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.5"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
matplotlib = "^3.10.0"

